--- a/docs/rtk-query/api/created-api/cache-management-utils.mdx
+++ b/docs/rtk-query/api/created-api/cache-management-utils.mdx
@@ -190,6 +190,8 @@ const resetApiState = () => ({
 
 A Redux action creator that can be dispatched to manually reset the api state completely. This will immediately remove all existing cache entries, and all queries will be considered 'uninitialized'.
 
+Note that [hooks](./hooks.mdx) also track state in local component state and might not fully be reset by `resetApiState`.
+
 #### Example
 
 ```ts no-transpile
