Update doc to reflect that default middleware is not replaced when using getDefaultMiddleware

--- a/docs/api/immutabilityMiddleware.mdx
+++ b/docs/api/immutabilityMiddleware.mdx
@@ -120,7 +120,7 @@ import exampleSliceReducer from './exampleSlice'
 
 const store = configureStore({
   reducer: exampleSliceReducer,
-  // Note that this will replace all default middleware
+  // Note that this will NOT replace all default middleware
   middleware: (getDefaultMiddleware) =>
     getDefaultMiddleware({
       immutableCheck: {
