--- a/docs/api/createSlice.mdx
+++ b/docs/api/createSlice.mdx
@@ -106,8 +106,7 @@ const counterSlice = createSlice({
 If you need to customize the creation of the payload value of an action creator by means of a [`prepare callback`](./createAction.mdx#using-prepare-callbacks-to-customize-action-contents), the value of the appropriate field of the `reducers` argument object should be an object instead of a function. This object must contain two properties: `reducer` and `prepare`. The value of the `reducer` field should be the case reducer function while the value of the `prepare` field should be the prepare callback function:
 
 ```ts
-import { createSlice, PayloadAction } from '@reduxjs/toolkit'
-import { nanoid } from 'nanoid'
+import { createSlice, PayloadAction, nanoid } from '@reduxjs/toolkit'
 
 interface Item {
   id: string
