--- a/docs/rtk-query/api/fetchBaseQuery.mdx
+++ b/docs/rtk-query/api/fetchBaseQuery.mdx
@@ -13,7 +13,7 @@ description: 'RTK Query > API: fetchBaseQuery reference'
 
 This is a very small wrapper around [`fetch`](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API) that aims to simplify requests. It is not a full-blown replacement for `axios`, `superagent`, or any other more heavy-weight library, but it will cover the large majority of your needs.
 
-It takes all standard options from fetch's [`RequestInit`](https://developer.mozilla.org/en-US/docs/Web/API/WindowOrWorkerGlobalScope/fetch) interface, as well as `baseUrl`, a `prepareHeaders` function, and an optional `fetch` function.
+It takes all standard options from fetch's [`RequestInit`](https://developer.mozilla.org/en-US/docs/Web/API/WindowOrWorkerGlobalScope/fetch) interface, as well as `baseUrl`, a `prepareHeaders` function, an optional `fetch` function, and a `paramsSerializer` function.
 
 - `baseUrl` _(required)_
   - Typically a string like `https://api.your-really-great-app.com/v1/`. If you don't provide a `baseUrl`, it defaults to a relative path from where the request is being made. You should most likely _always_ specify this.
@@ -25,6 +25,8 @@ It takes all standard options from fetch's [`RequestInit`](https://developer.moz
     ;(headers: Headers, api: { getState: () => unknown }) => Headers
     ```
 
+- `paramsSerializer` _(optional)_
+  - A function that can be used to apply custom transformations to the data passed into [`params`](#setting-the-query-string). If you don't provide this, `params` will be given directly to `new URLSearchParms()`. With some API integrations, you may need to leverage this to use something like the [`query-string`](https://github.com/sindresorhus/query-string) library to support different array types.
 - `fetchFn` _(optional)_
   - A fetch function that overrides the default on the window. Can be useful in SSR environments where you may need to leverage `isomorphic-fetch` or `cross-fetch`.
 
@@ -154,7 +156,10 @@ By default, `fetchBaseQuery` assumes that every request you make will be `json`,
 
 ### Setting the query string
 
-`fetchBaseQuery` provides a simple mechanism that converts an `object` to a serialized query string. If this doesn't suit your needs, you can always build your own querystring and set it in the `url`.
+`fetchBaseQuery` provides a simple mechanism that converts an `object` to a serialized query string by passing the object. If this doesn't suit your needs, you have two options:
+
+1. Pass the `paramsSerializer` option to `fetchBaseQuery` to apply custom transformations
+2. Build your own querystring and set it in the `url`
 
 ```ts no-transpile
  // omitted
@@ -162,7 +167,9 @@ By default, `fetchBaseQuery` assumes that every request you make will be `json`,
     updateUser: builder.query({
       query: (user: Record<string, string>) => ({
         url: `users`,
-        params: user // The user object is automatically converted and produces a request like /api/users?first_name=test&last_name=example
+        // Assuming no `paramsSerializer` is specified, the user object is automatically converted
+        // and produces a url like /api/users?first_name=test&last_name=example
+        params: user
       }),
     }),
 ```
