--- a/docs/rtk-query/usage/error-handling.mdx
+++ b/docs/rtk-query/usage/error-handling.mdx
@@ -94,7 +94,7 @@ import { toast } from 'your-cool-library'
 export const rtkQueryErrorLogger: Middleware = (api: MiddlewareAPI) => (
   next
 ) => (action) => {
-  // RTK Query uses `createAsyncThunk` from redux-toolkit under the hood, so we're able to utilize these use matchers!
+  // RTK Query uses `createAsyncThunk` from redux-toolkit under the hood, so we're able to utilize these matchers!
   if (isRejectedWithValue(action)) {
     console.warn('We got a rejected action!')
     toast.warn({ title: 'Async error!', message: action.error.data.message })
